--- a/pos_tax/demo/account_tax.yml
+++ b/pos_tax/demo/account_tax.yml
@@ -1,11 +1,10 @@
 # -*- encoding: utf-8 -*-
 ##############################################################################
 #
-#    Point Of Sale - Tax Module for Odoo
-#    Copyright (C) 2014-Today GRAP (http://www.grap.coop)
-#    @author Julien WESTE
+#    Point Of Sale - Tax for Odoo
+#    Copyright (C) 2014 GRAP (http://www.grap.coop)
 #    @author Sylvain LE GAL (https://twitter.com/legalsylvain)
-
+#
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU Affero General Public License as
 #    published by the Free Software Foundation, either version 3 of the
@@ -21,27 +20,16 @@
 #
 ##############################################################################
 
-from openerp.osv import fields
-from openerp.osv.orm import Model
+- !record {model: account.tax, id: tax_VAT_excl}:
+    name: Tax 10% With VAT Excl.
+    type_tax_use: sale
+    type: percent
+    amount: 0.1
+    price_include: False
 
-
-class pos_order_line_tax_rel(Model):
-    _name = 'pos.order.line.tax.rel'
-
-    # Columns section
-    _columns = {
-        'tax_id': fields.many2one(
-            'account.tax', 'Tax', required=True, ),
-        'orderline_id': fields.many2one(
-            'pos.order.line', 'Order Line', required=True),
-        'baseHT': fields.float(
-            'Base HT'),
-        'amount_tax': fields.float(
-            'Tax Amount'),
-    }
-
-    # Defaults section
-    _defaults = {
-        'baseHT': 0.0,
-        'amount_tax': 0.0,
-    }
+- !record {model: account.tax, id: tax_VAT_incl}:
+    name: Tax 15% With VAT Incl.
+    type_tax_use: sale
+    type: percent
+    amount: 0.15
+    price_include: True
