[ADD] 'integrated_trade_product

--- a/integrated_trade_product/demo/product_supplierinfo.yml
+++ b/integrated_trade_product/demo/product_supplierinfo.yml
@@ -1,7 +1,7 @@
 # -*- encoding: utf-8 -*-
 ##############################################################################
 #
-#    Integrated Trade - Base module for OpenERP
+#    Integrated Trade - Product module for OpenERP
 #    Copyright (C) 2014-Today GRAP (http://www.grap.coop)
 #    @author Sylvain LE GAL (https://twitter.com/legalsylvain)
 #
@@ -20,24 +20,14 @@
 #
 ##############################################################################
 
-- !record {model: res.users, id: base.user_root}:
-    company_ids:
-        - base.main_company
-        - customer_company
-        - supplier_company
+- !record {model: product.product, id: product_supplier_banana}:
+    name: Supplier Banana
+    default_code: SUPPLIER-BANA
+    categ_id: product.product_category_all
+    list_price: 2.45
+    uom_id: product.product_uom_kgm
+    uom_po_id: product.product_uom_kgm
+    uos_id: product.product_uom_kgm
+    sale_ok: True
+    company_id: integrated_trade_base.supplier_company
 
-- !record {model: res.users, id: integrated_customer_user}:
-    name: Integrated Customer User
-    login: integrated_customer
-    password: demo
-    company_id: customer_company
-    company_ids:
-        - customer_company
-
-- !record {model: res.users, id: integrated_supplier_user}:
-    name: Integrated Supplier User
-    login: integrated_supplier
-    password: demo
-    company_id: supplier_company
-    company_ids:
-        - supplier_company
