--- a/integrated_trade_base/demo/res_groups.yml
+++ b/integrated_trade_base/demo/res_groups.yml
@@ -27,3 +27,13 @@
 - !record {model: res.groups, id: base.group_multi_company}:
     users:
         - base.user_root
+
+- !record {model: res.groups, id: integrated_trade_user}:
+    users:
+        - integrated_customer_user
+        - integrated_supplier_user
+
+- !record {model: res.groups, id: base.group_sale_manager}:
+    users:
+        - base.user_root
+        - integrated_customer_user
