--- a/integrated_trade_stock/demo/res_groups.yml
+++ b/integrated_trade_stock/demo/res_groups.yml
@@ -1,7 +1,7 @@
 # -*- encoding: utf-8 -*-
 ##############################################################################
 #
-#    Integrated Trade - Product module for OpenERP
+#    Integrated Trade - Stock module for Odoo
 #    Copyright (C) 2014-Today GRAP (http://www.grap.coop)
 #    @author Sylvain LE GAL (https://twitter.com/legalsylvain)
 #
@@ -20,15 +20,6 @@
 #
 ##############################################################################
 
-from openerp.osv import fields
-from openerp.osv.orm import Model
-
-
-class product_supplierinfo(Model):
-    _inherit = 'product.supplierinfo'
-
-    _columns = {
-        'supplier_product_id': fields.many2one(
-            'product.product',
-            'Product in the Supplier Catalog', selected=True),
-        }
+- !record {model: res.groups, id: stock.group_stock_user}:
+    users:
+        - integrated_trade_base.integrated_customer_user
