--- a/integrated_trade_account/demo/account_account.yml
+++ b/integrated_trade_account/demo/account_account.yml
@@ -1,8 +1,8 @@
 # -*- encoding: utf-8 -*-
 ##############################################################################
 #
-#    Integrated Trade - Base module for OpenERP
-#    Copyright (C) 2014-Today GRAP (http://www.grap.coop)
+#    Integrated Trade - Account module for Odoo
+#    Copyright (C) 2015-Today GRAP (http://www.grap.coop)
 #    @author Sylvain LE GAL (https://twitter.com/legalsylvain)
 #
 #    This program is free software: you can redistribute it and/or modify
@@ -20,25 +20,26 @@
 #
 ##############################################################################
 
-- !record {model: res.users, id: base.user_root}:
-    company_id: base.main_company
-    company_ids:
-        - customer_company
-        - supplier_company
-        - base.main_company
+- !record {model: account.account, id: supplier_account_root}:
+    code: SUP_ROOT
+    name: Integrated Trade - Root Account
+    type: view
+    user_type: account.data_account_type_view
+    company_id: integrated_trade_base.supplier_company
 
-- !record {model: res.users, id: customer_user}:
-    name: Integrated Customer User
-    login: integrated_customer
-    password: demo
-    company_id: customer_company
-    company_ids:
-        - customer_company
 
-- !record {model: res.users, id: supplier_user}:
-    name: Integrated Supplier User
-    login: integrated_supplier
-    password: demo
-    company_id: supplier_company
-    company_ids:
-        - supplier_company
+- !record {model: account.account, id: supplier_account_receivable}:
+    code: SUP_REC
+    name: Integrated Trade - Supplier Debtors
+    parent_id: supplier_account_root
+    type: receivable
+    user_type: account.data_account_type_receivable
+    company_id: integrated_trade_base.supplier_company
+
+- !record {model: account.account, id: supplier_account_payable}:
+    code: SUP_CRE
+    name: Integrated Trade - Supplier Creditors
+    parent_id: supplier_account_root
+    type: payable
+    user_type: account.data_account_type_payable
+    company_id: integrated_trade_base.supplier_company
