--- a/integrated_trade_product/demo/product_pricelist.yml
+++ b/integrated_trade_product/demo/product_pricelist.yml
@@ -1,8 +1,8 @@
 # -*- encoding: utf-8 -*-
 ##############################################################################
 #
-#    Integrated Trade - Base module for OpenERP
-#    Copyright (C) 2014-Today GRAP (http://www.grap.coop)
+#    Integrated Trade - Product module for Odoo
+#    Copyright (C) 2015-Today GRAP (http://www.grap.coop)
 #    @author Sylvain LE GAL (https://twitter.com/legalsylvain)
 #
 #    This program is free software: you can redistribute it and/or modify
@@ -20,25 +20,17 @@
 #
 ##############################################################################
 
-- !record {model: res.users, id: base.user_root}:
-    company_id: base.main_company
-    company_ids:
-        - customer_company
-        - supplier_company
-        - base.main_company
+- !record {model: product.pricelist, id: pricelist_discount}:
+    name: Integrated Trade - Sale Pricelist (Discount)
+    company_id: integrated_trade_base.supplier_company
+    type: sale
 
-- !record {model: res.users, id: customer_user}:
-    name: Integrated Customer User
-    login: integrated_customer
-    password: demo
-    company_id: customer_company
-    company_ids:
-        - customer_company
+- !record {model: product.pricelist.version, id: pricelist_version_discount}:
+    name: Integrated Trade - Sale Pricelist Version (Discount)
+    pricelist_id: pricelist_discount
 
-- !record {model: res.users, id: supplier_user}:
-    name: Integrated Supplier User
-    login: integrated_supplier
-    password: demo
-    company_id: supplier_company
-    company_ids:
-        - supplier_company
+- !record {model: product.pricelist.item, id: pricelist_item_discount}:
+    name: Integrated Trade - Sale Pricelist Item (Discount)
+    price_version_id: pricelist_version_discount
+    base: 1
+    price_discount: -0.10
