--- a/integrated_trade_product/demo/product_product.yml
+++ b/integrated_trade_product/demo/product_product.yml
@@ -24,7 +24,7 @@
     name: Supplier Banana
     default_code: SUPPLIER-BANA
     categ_id: product.product_category_all
-    list_price: 2.45
+    list_price: 3.05
     uom_id: product.product_uom_kgm
     uom_po_id: product.product_uom_kgm
     uos_id: product.product_uom_kgm
@@ -35,7 +35,7 @@
     name: Supplier Strawberry (250 gr)
     default_code: SUPPLIER-STRW
     categ_id: product.product_category_all
-    list_price: 3.10
+    list_price: 4.95
     uom_id: product.product_uom_unit
     uom_po_id: product.product_uom_unit
     uos_id: product.product_uom_unit
@@ -53,7 +53,7 @@
     company_id: integrated_trade_base.supplier_company
 
 - !record {model: product.product, id: product_customer_apple}:
-    name: Supplier Customer Apple
+    name: Customer Apple
     default_code: CUSTOMER-APPL
     list_price: 2.80
     uom_id: product.product_uom_kgm
