--- a/integrated_trade_product/demo/res_groups.yml
+++ b/integrated_trade_product/demo/res_groups.yml
@@ -1,8 +1,8 @@
 # -*- encoding: utf-8 -*-
 ##############################################################################
 #
-#    Integrated Trade - Base module for OpenERP
-#    Copyright (C) 2014-Today GRAP (http://www.grap.coop)
+#    Integrated Trade - Product module for Odoo
+#    Copyright (C) 2015-Today GRAP (http://www.grap.coop)
 #    @author Sylvain LE GAL (https://twitter.com/legalsylvain)
 #
 #    This program is free software: you can redistribute it and/or modify
@@ -20,25 +20,12 @@
 #
 ##############################################################################
 
-- !record {model: res.users, id: base.user_root}:
-    company_id: base.main_company
-    company_ids:
-        - customer_company
-        - supplier_company
-        - base.main_company
+- !record {model: res.groups, id: product.group_sale_pricelist}:
+    users:
+        - base.user_root
+        - integrated_trade_base.supplier_user
 
-- !record {model: res.users, id: customer_user}:
-    name: Integrated Customer User
-    login: integrated_customer
-    password: demo
-    company_id: customer_company
-    company_ids:
-        - customer_company
-
-- !record {model: res.users, id: supplier_user}:
-    name: Integrated Supplier User
-    login: integrated_supplier
-    password: demo
-    company_id: supplier_company
-    company_ids:
-        - supplier_company
+- !record {model: res.groups, id: product.group_purchase_pricelist}:
+    users:
+        - base.user_root
+        - integrated_trade_base.customer_user
