--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+sudo: false
+cache: pip
+
 addons:
   apt:
     packages:
@@ -10,37 +13,24 @@ python:
   - "2.7"
 
 env:
-  - LINT_CHECK="1"
-  - VERSION="7.0" ODOO_REPO="odoo/odoo" LINT_CHECK="0"
-  - VERSION="7.0" ODOO_REPO="OCA/OCB" LINT_CHECK="0"
+  - VERSION="8.0" LINT_CHECK="1"
+  - VERSION="8.0" ODOO_REPO="odoo/odoo" LINT_CHECK="0"
+  - VERSION="8.0" ODOO_REPO="OCA/OCB" LINT_CHECK="0"
+  - VERSION="8.0" UNIT_TEST="1" LINT_CHECK="0"
 
 virtualenv:
   system_site_packages: true
 
-before_install:
-  - sudo apt-get install bzr
-  - sudo apt-get install wkhtmltopdf
-  - sudo pip install GitPython
-  - sudo pip install bzr
-  - sudo pip install cairosvg
-  - sudo pip install unidecode
 
 install:
-  - git clone https://github.com/OCA/web.git $HOME/web -b 7.0
-  - git clone https://github.com/OCA/server-tools.git $HOME/server-tools -b 7.0
-  - git clone https://github.com/OCA/pos.git $HOME/pos -b 7.0
-  - git clone https://github.com/OCA/margin-analysis.git $HOME/margin-analysis -b 7.0
-  - git clone https://github.com/OCA/sale-workflow.git $HOME/sale-workflow -b 7.0
-  - git clone https://github.com/OCA/webkit-tools.git $HOME/webkit-tools -b 7.0
-  - git clone https://github.com/OCA/stock-logistics-workflow.git $HOME/stock-logistics-workflow -b 7.0
-  - git clone https://github.com/OCA/l10n-france.git $HOME/l10n-france -b 7.0
-  - git clone https://github.com/grap/odoo-addons-cis.git $HOME/odoo-addons-cis -b 7.0
-  - git clone https://github.com/grap/odoo-addons-cpo.git $HOME/odoo-addons-cpo -b 7.0
-  - git clone https://github.com/grap/odoo-addons-misc.git $HOME/odoo-addons-misc -b 7.0
+    # Generic OCA lines
   - git clone https://github.com/OCA/maintainer-quality-tools.git ${HOME}/maintainer-quality-tools
   - export PATH=${HOME}/maintainer-quality-tools/travis:${PATH}
-  - travis_install_nightly ${VERSION}
+  - travis_install_nightly
   - printf '[options]\n\nrunning_env = dev' > ${HOME}/.openerp_serverrc
+  - ln -s server_environment_files_sample ./server_environment_files
+
+    # Custom Lines
 
 script:
   - travis_run_tests
