--- a/grap_cooperative/security/res_groups.yml
+++ b/grap_cooperative/security/res_groups.yml
@@ -1,22 +1,39 @@
-- 
-  Creating a ir.model.access record
-- 
-  !record {model: res.groups, id: res_group_grap_cooperative_manager}:
+# -*- encoding: utf-8 -*-
+##############################################################################
+#
+#    GRAP - Cooperative module for Odoo
+#    Copyright (C) 2014-Today GRAP (http://www.grap.coop)
+#    @author Sylvain LE GAL (https://twitter.com/legalsylvain)
+#
+#    This program is free software: you can redistribute it and/or modify
+#    it under the terms of the GNU Affero General Public License as
+#    published by the Free Software Foundation, either version 3 of the
+#    License, or (at your option) any later version.
+#
+#    This program is distributed in the hope that it will be useful,
+#    but WITHOUT ANY WARRANTY; without even the implied warranty of
+#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#    GNU Affero General Public License for more details.
+#
+#    You should have received a copy of the GNU Affero General Public License
+#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
+#
+##############################################################################
+
+- !record {model: res.groups, id: res_group_grap_cooperative_manager}:
     category_id: base.module_category_usability
-    name: grap cooperative manager
+    name: GRAP - Cooperative Manager
+    users:
+        - base.user_root
 
-- 
-  Creating a ir.model.access record
-- 
-  !record {model: res.groups, id: res_group_grap_computer_manager}:
+- !record {model: res.groups, id: res_group_grap_computer_manager}:
     category_id: base.module_category_usability
-    name: grap computer manager
+    name: GRAP - IT Manager
+    users:
+        - base.user_root
 
-
-- 
-  Creating a ir.model.access record
-- 
-  !record {model: res.groups, id: res_group_grap_timesheet_user}:
+- !record {model: res.groups, id: res_group_grap_timesheet_user}:
     category_id: base.module_category_usability
-    name: grap timesheet user
-
+    name: GRAP - Timesheet User
+    users:
+        - base.user_root
