--- a/grap_change_data/data/product_category.yml
+++ b/grap_change_data/data/product_category.yml
@@ -2,7 +2,7 @@
 ##############################################################################
 #
 #    GRAP - Change Data module for Odoo
-#    Copyright (C) 2015 GRAP (http://www.grap.coop)
+#    Copyright (C) 2015-Today GRAP (http://www.grap.coop)
 #    @author Sylvain LE GAL (https://twitter.com/legalsylvain)
 #
 #    This program is free software: you can redistribute it and/or modify
@@ -19,7 +19,6 @@
 #    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 ##############################################################################
-
 
 - !record {model: product.category, id: product.product_category_1}:
     active: False
