--- a/grap_change_default_value/data/ir_values.yml
+++ b/grap_change_default_value/data/ir_values.yml
@@ -1,7 +1,7 @@
 # -*- encoding: utf-8 -*-
 ##############################################################################
 #
-#    GRAP - Change Ir Values Module for Odoo
+#    GRAP - Change Default Value Module for Odoo
 #    Copyright (C) 2013-Today GRAP (http://www.grap.coop)
 #    @author Julien WESTE
 #    @author Sylvain LE GAL (https://twitter.com/legalsylvain)
