--- a/grap_change_default_value/demo/res_groups.yml
+++ b/grap_change_default_value/demo/res_groups.yml
@@ -1,9 +1,8 @@
 # -*- encoding: utf-8 -*-
 ##############################################################################
 #
-#    GRAP - Change Ir Values Module for Odoo
-#    Copyright (C) 2013-Today GRAP (http://www.grap.coop)
-#    @author Julien WESTE
+#    GRAP - Change Default Value Module for Odoo
+#    Copyright (C) 2015-Today GRAP (http://www.grap.coop)
 #    @author Sylvain LE GAL (https://twitter.com/legalsylvain)
 #
 #    This program is free software: you can redistribute it and/or modify
@@ -21,4 +20,6 @@
 #
 ##############################################################################
 
-from . import model
+- !record {model: res.groups, id: base.group_sale_manager}:
+    users:
+        - base.user_root
